--- a/templates/status.html
+++ b/templates/status.html
@@ -3,6 +3,7 @@
 <head>
     <title>Order Status</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
 </head>
 <body>
     <div class="container">
